--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <p class="control_info">
             The # of grading TAs, the app will do it's best to offload extra students fairly
           </p>
-          <input class="control__input" id="taCount" type="number" value="1" min="1">
+          <input class="control__input" id="taCount" type="number" value="1" min="1" max="4">
         </div>
         <div class="control__col">
           <label class="control__label">Random Seed</label>
